[package]
name = "furiosa-native-postprocess"
version = "0.9.0"
edition = "2021"
exclude = ["models"]

[features]
legacy-npu-tools = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "furiosa_native_postprocess"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.5"
ndarray = { version = "0.15.6" }
numpy = "0.18.0"
openmp-sys = "1.2.3"
pyo3 = { version = "0.18.3", features = ["extension-module"] }
rayon = "1.7.0"
rulinalg = "0.4.2"
tracing = "0.1.37"
