[package]
name = "furiosa-native-postprocess"
version = "0.9.0-dev2"
edition = "2021"
exclude = ["models"]

[features]
legacy-npu-tools = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "furiosa_native_postprocess"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.12.0"
ndarray = { version = "0.15.6" }
numpy = "0.20.0"
openmp-sys = "1.2.3"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rayon = "1.8.0"
tracing = "0.1.40"
